Messages and style

--- a/public/index.html
+++ b/public/index.html
@@ -17,16 +17,18 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Kursid</th>
+                        <th>KursID</th>
                         <th>Kursnamn</th>
                         <th class="period">Period</th>
-                        <th class="delete">Radera</th>
+                        <th class="delete sr-only">Radera</th>
                     </tr>
                 </thead>
                 <tbody id="course-table">
                     <!-- Table with all courses --> 
                 </tbody>
             </table>
+            <br />
+            <p id="delete-message"></p>
 
     </main>
     <footer>
